# sicer-architet-agent

./: README.md  install.sh  pyproject.toml
skills/sicer/: SKILL.md
skills/sicer-architet-agent/: SKILL.md
src/sicer_architet_agent/: graph.py  models.py  server.py
src/sicer_architet_agent/analyzers/: __init__.py  maven.py  repository.py
tests/: test_agent.py
